finalizing results section

--- a/composition.tex
+++ b/composition.tex
@@ -10,7 +10,7 @@
 
 The first fundamental step in regional seismic hazard analysis is the composition of a reliable seismic catalog that includes both historically documented and instrumentally recorded earthquakes. Nowadays, instrumental datasets are easily accessible through international, regional, and local agencies. Historical data, on the other hand, lends itself to subjective interpretation. Notable previous efforts to compose uniform earthquake catalogs for Iran include but are not limited to \citet{Ambraseys_1982_Book}, \citet{moinfar1994}, and \citet{Berberian_1995_Tech}. These studies, however, differ from each other in their use of magnitude scales or magnitude conversion rules, and the extent to which they accept historical accounts as valid data. 
 
-According to \citet{Ambraseys_1982_Book}, there is evidence of earthquakes as far back as the third millennium B.C., yet some of those accounts are difficult to interpret. \citet{Mirzaei1997} compiled a catalog with historical events dating back to the 4th century B.C.~and instrumental earthquakes through 1994 in which a comprehensive list of studies was considered and magnitudes uniformly converted to surface wave magnitude ($M_s$). Most ground motion prediction equations employed today in seismic hazard, however, use moment magnitude ($M_w$) instead. 
+According to \citet{Ambraseys_1982_Book}, there is evidence of earthquakes as far back as the third millennium B.C., yet some of those accounts are difficult to interpret. \citet{Mirzaei1997} compiled a catalog with historical events dating back to the 4th century B.C.~and instrumental earthquakes through 1994 in which a comprehensive list of studies was considered and magnitudes uniformly converted to surface wave magnitude ($M_s$). Most ground motion prediction equations employed today in seismic hazard studies, however, use moment magnitude ($M_w$) instead. 
 
 Recent catalogs such as that by \citet{Karimiparidari2013}, \citet{Shahvar2013}, and \citet{Zare2014} are all compiled using magnitudes converted to $M_w$. \citet{Karimiparidari2013}, for instance, compiled a catalog for Iran and adjacent areas using international and national datasets including events up until April, 2010, with $M_w > 5$. They developed relationships between moment magnitude and other magnitude scales and removed foreshocks and aftershocks using the procedure by \citet{Gardner1974}. \citet{Shahvar2013} built a catalog for the Iranian plateau for events with $M_w \geq 4$ merging data from two local and seven international datasets for the 1900--2011 period. They used the orthogonal regression method by \citet{Castellaro2006} to derive magnitude conversions and removed foreshocks and aftershocks according to the procedure by \citet{Uhrhammer_1986_EN}. In addition, \citet{Shahvar2013} provided a declustered version of the catalog. 
 
