--- a/content.tex
+++ b/content.tex
@@ -16,9 +16,7 @@
 % Temporary stuff
 % ---------------
 
-% \input{discussion_of_results}
-
-% \input{conclusion}    
+\input{conclusions}    
 
 % \input{Acknowledgements}
 
