--- a/hazard.tex
+++ b/hazard.tex
@@ -26,7 +26,7 @@ In this study we discretize the region of interest into a regular grid with cell
 % 
 where $\tilde{n}_i$ is the smoothed, normalized number of events in cell $i$, $\Delta_{ij}$ is the distance between the $i$-th and $j$-th cells, and $c$ is the correlation distance. The summations in Eq.~\ref{eq:nnorm} are calculated over the number of $j$ cells within a distance $3c$ from the $i$-th cell. It should be noted that in this process we convert the cumulative number of events to incremental values following \citet{Herrmann1977}. We also note that according to \citet{Frankel1995}, moderate earthquakes generally occur in areas where there have been significant numbers of events with magnitudes $M \geq 3$, thus our interest in having complemented the earthquake catalog for events above this threshold.
 
-It is obvious from Eq.~\ref{eq:nnorm} that an important parameter in smoothing the seismicity is the correlation distance. Different values of $c$ have been used in past studies, ranging between 10 and 50 km. \citet{Frankel1995} and \citet{Boyd2008} assumed $c=50$~km, \citet{Barani2007} used $c=25$~km, and \citet{Foteva2006} used $c=10$ and 15 km. According to \citet{Mirzaei1997}, determining an appropriate value of $c$ depends on the crustal structure of the region, the distribution of stations, and the number and quality of records. We use an intermediate value of $c=30$~km. This selection is consistent with epicentral uncertainty for previous hazard zoning maps for Iran \citep[see][]{Zare2012}.
+It is obvious from Eq.~\ref{eq:nnorm} that an important parameter in smoothing the seismicity is the correlation distance. Different values of $c$ have been used in past studies, ranging between 10 and 50 km. \citet{Frankel1995} and \citet{Boyd2008} assumed a correlation distance of 50~km, \citet{Foteva2006} used 10 and 15 km, \citet{Barani2007} used 25~km, and \citet{Khodaverdian_2016_BSSA} used 40 km. According to \citet{Mirzaei1997}, determining an appropriate value of $c$ depends on the crustal structure of the region, the distribution of stations, and the number and quality of records. We use an intermediate value of $c=30$~km. This selection is consistent with epicentral uncertainty for previous hazard zoning maps for Iran \citep[see][]{Zare2012}.
 
 In turn, we consider the $b$-values to be constant within each seismic zone as delimited in Fig.~\ref{fig:iran}. Details about the calculation of the $b$-value for each zone are provided below. By contrast, in the recent work by \citet{Khodaverdian_2016_BSSA}, the authors computed spatially-variable $b$-values within large grid-cells of size 1\textdegree{} $\times$ 1\textdegree{} based on the average seismicity within a 200-km radius from each cell. While gridding $b$-values and considering the influence of neighboring large-size cells allows to draw information from the background seismicity, it is unavoidable to have the contributing areas cross over seismic zones of different characteristics, which may pollute the computation of $b$-values. Admittedly, these are subjective decisions and any reasonable choice can be considered valid or within the margins of the associated epistemic uncertainty.
 
