--- a/parameters.tex
+++ b/parameters.tex
@@ -2,7 +2,7 @@
 \begin{figure*}[t]
     \centering
     \includegraphics[width=\textwidth]{figures/pdf/figure-07} 
-    \caption{Annual probability of exceedance as a function of earthquake magnitude for the seismic zones in the region of interest. The three curves in red correspond to those seismic zones completely considered within the study area, whereas the ones in blue are the two additional contributing zones from the rest of the country. THe last curve in green corresponds to the complete region of interest, here referred to as the uniform model. The shaded range indicates the models' $\pm 1$ standard deviation.}
+    \caption{Annual probability of exceedance as a function of earthquake magnitude for the seismic zones in the region of interest. The three curves in red correspond to those seismic zones completely considered within the study area, whereas the ones in blue are the two additional contributing zones from the rest of the country. The last curve in green corresponds to the complete region of interest, here referred to as the uniform model. The shaded range indicates the models' $\pm 1$ standard deviation.}
     \label{fig:annualp}
 \end{figure*}
 
@@ -29,9 +29,9 @@
 
 Following the general approach described in the previous sections and using the information collected about the seismic catalog and its completeness, we computed the seismicity parameters $a$ and $b$, and the maximum magnitude $M_{\max}$ using the seismic hazard assessment software HA3 (version 3). This software implements the procedures developed by \citet{Kijko_1989_BSSA, Kijko_1992_BSSA}, and subsequent updates by \citet{Kijko_2004_PAG}. HA3 is widely used for this type of computations and is regarded as a reliable tool in seismic hazard analysis \citep[see, for instance,][]{Karimiparidari2013, Khodaverdian_2016_BSSA}.
 
-The $a$-value is estimated based on the completeness year, the correlation distance, and the number of events per grid cell. We assume magnitude increments of $\Delta M = 0.1$, count events with magnitude $M_w > 3$, and smooth the number of events for each cell. This means each cell has a different $a$-value and thus the result is variable throughout our region of interest. On the other hand, we consider the $b$-value and $M_{\max}$ to be constant within each of the seismic zones in our study area. We compute $b$ and $M_{\max}$ using HA3 and the information from the catalog, which we divide in four sub-catalogs: 2 incomplete catalogs for the prehistorical (before 1000) and historical (between 1000 and 1799) event periods, and two complete catalogs for  early instrumental (between 1800 and 1899) and instrumental (between 1900 and 2015) event periods. In this process we use the values of $M_c$ shown in Table \ref{tab:completeness}. 
+The $a$-value is estimated based on the completeness year, the correlation distance, and the number of events per grid cell. We assume magnitude increments of $\Delta M = 0.1$, count events with magnitude $M_w > 3$, and smooth the number of events for each cell. This means each cell has a different $a$-value and thus the result is variable throughout our region of interest. On the other hand, we consider the $b$-value and $M_{\max}$ to be constant within each of the seismic zones in our study area. We compute $b$ and $M_{\max}$ using HA3 and the information from the catalog, which we divide in five sub-catalogs: one incomplete catalog for the prehistorical period before 1000, one incomplete catalog for the historical period between 1000 and 1799, one complete catalog for the early instrumental period between 1800 and 1899, and two complete catalogs for the instrumental periods between 1900 and 1999, and between 2000 and 2015. In this process we use the values of $M_c$ shown in Table \ref{tab:completeness}. 
 
-We obtain $b$ and $M_{\max}$ for two different models. In the first model we obtain these parameters independently for each one of the five seismic zones influencing the hazard in northern Iran. That is, we obtain distinct values of $b$ and $M_{\max}$ for the main northern seismic zones of Azerbaijan, Alborz, and Kopeh Dagh, as well as for the portions of the Zagros and Central-East seismic zones contributing to our region of interest (see Fig.~\ref{fig:iran} for reference). In the second model we consider the whole study area as a uniform seismic zone. Admittedly, this assumption is unrealistic if considered from the point of view that different seismic zones have different seismicity parameters. Computing results for this uniform model is, nonetheless, useful for the analysis of results and comparisons with other studies. Table \ref{tab:params} shows the parameters $b$ and $M_{\max}$ obtained with HA3 for the five seismic zones and the uniform regional model, along with the observed maximum magnitude, $M_{\max}^{\mathrm{obs}}$; and Fig.~\ref{fig:annualp} shows the annual probability of exceedance as a function of earthquake magnitude.
+We obtain $b$ and $M_{\max}$ for two different models. In the first model we obtain these parameters independently for each one of the five seismic zones influencing the hazard in northern Iran. That is, we obtain distinct values of $b$ and $M_{\max}$ for the main northern seismic zones of Azerbaijan, Alborz, and Kopeh Dagh, as well as for the Zagros and Central-East seismic zones contributing to our region of interest (see Fig.~\ref{fig:iran} for reference). In the second model we consider the whole study area as a uniform seismic zone. Admittedly, this assumption is unrealistic if considered from the point of view that different seismic zones have different seismicity parameters. Computing results for this uniform model is, nonetheless, useful for the analysis of results and comparisons with other studies. Table \ref{tab:params} shows the parameters $b$ and $M_{\max}$ obtained with HA3 for the five seismic zones and the uniform regional model, along with the observed maximum magnitude, $M_{\max}^{\mathrm{obs}}$; and Fig.~\ref{fig:annualp} shows the annual probability of exceedance as a function of earthquake magnitude.
 
 % *********************************************************************************************************************
 % OLD
