--- a/results.tex
+++ b/results.tex
@@ -34,11 +34,11 @@ In the distinct regions R models, we computed the probability of exceedance of t
 
 We extract expected levels of ground motion for magnitudes 5.5 and 6.5, based on the assumption that buildings of different construction systems may be vulnerable to different magnitude earthquakes. It is natural to anticipate that modern constructions in urban areas in Iran follow current building regulations and are thus well-designed to withstand moderate magnitude earthquakes $M_w$ 4.5--6.5, and to undergo moderate non-life threatening damage during $M_w > 6.5$ events. Unconventional constructions in poor city outskirts, rural housing and historical buildings may, however, be vulnerable to $M_w \leq 5.5$, and thus becomes relevant to entertain lower magnitude exceedance levels. In turn, the 2 and 10 percent probability of exceedance in a 50-years span are considered a standard practice in seismic design \citep[e.g.,][]{BHRC2014}.
 
-Fig.~\ref{fig:pga} shows the expected mean PGA values obtained using the selected attenuation relationship as a measured of gravity (g) throughout the region of interest for the different model combinations. As can be expected, the highest levels of ground motion are associated with the 2R5.5 and 2U5.5 models, and the lowest with the 10R6.5 and 10U6.5 models. In results for the R models shown Fig.~\ref{fig:pga}a, the highest levels of expected ground motion occur in the Kopeh Dagh region along the border with Turkmenistan, followed by ground motions in the north-central region west from Tehran and Karaj, and in the vicinity of the Piranshahr fault between the Zagros and Azerbaijan seismic regions (see Fig.~\ref{fig:selected}b for reference). The Azerbaijan seismic zone does not present equally high levels of expected ground motion. In the U models shown in Fig.~\ref{fig:pga}b, on the other hand, the highest levels of expected ground motion are observed precisely in the area corresponding to the Azerbaijan seismic region, especially in the vicinity of the North Tabriz Fault system (see Fig.~\ref{fig:selected} for reference).
+Fig.~\ref{fig:pga} shows the expected mean PGA values obtained using the selected attenuation relationship as a measured of gravity (g) throughout the region of interest for the different model combinations. As can be expected, the highest levels of ground motion are associated with the 2R5.5 and 2U5.5 models, and the lowest with the 10R6.5 and 10U6.5 models. In results for the R models shown Fig.~\ref{fig:pga}a, the highest levels of expected ground motion occur in the Kopeh Dagh region along the border with Turkmenistan, and in a small area half-way between the city of Karaj and the Piranshahr fault, where a small concentration of events can be observed in Fig.~\ref{fig:catalog}b, as well as along the Piranshahr and Morvarid fault lines between the Zagros and Azerbaijan seismic regions (see Fig.~\ref{fig:selected}a for reference). The Azerbaijan seismic zone does not present equally high levels of expected ground motion. In the U models shown in Fig.~\ref{fig:pga}b, on the other hand, the highest levels of expected ground motion are observed precisely in the area corresponding to the Azerbaijan seismic region, especially in the vicinity of the North Tabriz Fault system (see Fig.~\ref{fig:selected} for reference).
 
 In general, the U models exhibit higher levels of expected ground motions when compared to their corresponding R models. This is illustrated in Fig.~\ref{fig:pgadiff}, which shows the differences between both set of models, U--R (U minus R). In this figure, positive values indicate that the U models have larger mean PGA values than the R models. As it can be seen, this is true practically throughout the whole region at very low levels, and in particular in the north-central region at a moderate level of up to 0.2 g and most predominantly in the north-western region of Azerbaijan at levels of about 0.2 to 0.5 g.
 
-Overall, these results are consistent with the seismicity observed in Fig.~\ref{fig:catalog}. The R model results, however, seem to be more sensitive to the influence of large magnitude events observed in both the historical and modern seismicity maps, with concentration of strong earthquakes in the Alborz and Kopeh Dagh regions; whereas the U model results seem to be more sensitive to the influence of low-to-moderate magnitude events, especially in the Azerbaijan region. This may be the cause of 
+Overall, these results are consistent with the seismicity observed in Fig.~\ref{fig:catalog}. The R model results, however, seem to be more sensitive to the influence of large magnitude events observed in both the historical and modern seismicity maps, with concentration of strong earthquakes in the Alborz and Kopeh Dagh regions; whereas the U model results seem to be more sensitive to the influence of low-to-moderate magnitude events, especially in the Azerbaijan region. This is because of the higher $b$-value obtained for the Azerbaijan region in the R model as opposed to the lower value for the U model.
 
 These, of course, are only mean expected levels of ground motion. A more complete picture is captured when considering statistical deviations. Fig.~\ref{fig:pgastd} shows again the mean PGA for the models 2R6.5 and 10R6.5, but this time along with the marginal values of plus and minus one standard deviation. Here, the standard deviation is carried forward in the calculation from the attenuation relationship and thus affects every grid point differently depending on the added contributions from each region. 
 
@@ -50,28 +50,29 @@ These figures show interest results. Combining the two magnitude levels in eithe
 
 \input{table-pga}
 
-We also note that the overall distribution of PGA values shown in Fig.~\ref{fig:pgaavgs}c are the ones that best agree with the recent study by \citet{Khodaverdian_2016_BSSA}. These estimates also agree, on average, with other previous studies. For the north-west seismic regions of Azerbaijan and Zagros, for instance, \citet{Tavakoli1999} predicts maximum mean PGA values of 0.45 g near the North Tabriz Fault and the North Tehran Fault zones, and 0.4 g around the city of Urmia, where we find equivalent values to be between 0.4 and 0.6 g, and about 0.35 g, respectively. The results from \citet{Vafaie2011} for the city of Tabriz, on the other hand, are slightly higher than the averages shown in Fig.~\ref{fig:pgaavgs}c and are closer to those we present in Fig.~\ref{fig:pga}b, which are in the order of 0.8 g and 0.6 for the models 2U5.5 and 10U5.5. In the north-central region of Alborz, \citet{Ghodrati2003} and \citet{Boostan2015} predict PGA values of the order 0.27--0.46 g and 0.42--0.48 for Tehran, where we found equivalent results to be between 0.3 and 0.45 g. Similarly, \citet{Abdi2013} reports expected PGA values in the vicinity of Karaj and Tehran to be on the order of 0.3 g. Results from \citet{Ghodrati2008} for the Gilan province around the city of Rasht are also of the same order of those we show in Figs.~\ref{fig:pga} and \ref{fig:pgaavgs}c. Finally, in for the Kopeh Dagh region, and in particular, for the city of Bojnurd in the nort-east province of Khorasan, \citet{Rahgozar2012} reports expected PGA values for return periods of 475 and 2475 years in range of 0.15--0.22 g and 0.28--0.49 g, respectively, where for magnitudes exceeding $M_w$ 6.5 we found equivalent values to be in the order of 0.2--0.4 and 0.4--0.6 g. Table \ref{tab:pga} shows a condensed version of these comparisons between our results and those of other previous studies for selected cities in northern Iran.
+We also note that the overall distribution of PGA values shown in Fig.~\ref{fig:pgaavgs}c are the ones that best agree with the recent study by \citet{Khodaverdian_2016_BSSA}. These estimates also agree, on average, with other previous studies. For the north-west seismic regions of Azerbaijan and Zagros, for instance, \citet{Tavakoli1999} predicts maximum mean PGA values of 0.45 g near the North Tabriz Fault and the North Tehran Fault zones, and 0.4 g around the city of Urmia, where we find equivalent values to be between 0.4 and 0.6 g, and about 0.35 g, respectively. The results from \citet{Vafaie2011} for the city of Tabriz, on the other hand, are slightly higher than the averages shown in Fig.~\ref{fig:pgaavgs}c and are closer to those we present in Fig.~\ref{fig:pga}b, which are in the order of 0.8 g and 0.6 for the models 2U5.5 and 10U5.5. In the north-central region of Alborz, \citet{Ghodrati2003} and \citet{Boostan2015} predict PGA values of the order 0.27--0.46 g and 0.42--0.48 for Tehran, where we found equivalent results to be between 0.3 and 0.45 g. Similarly, \citet{Abdi2013} reports expected PGA values in the vicinity of Karaj and Tehran to be on the order of 0.3 g. Results from \citet{Ghodrati2008} for the Gilan province around the city of Rasht are also of the same order of those we show in Figs.~\ref{fig:pga} and \ref{fig:pgaavgs}c. Finally, for the Kopeh Dagh region, and in particular, for the city of Bojnurd in the northeast province of Khorasan, \citet{Rahgozar2012} reports expected PGA values for return periods of 475 and 2475 years in range of 0.15--0.22 g and 0.28--0.49 g, respectively, where for magnitudes exceeding $M_w$ 6.5 we found equivalent values to be in the order of 0.2--0.4 and 0.4--0.6 g. 
 
 \begin{figure*}[th!]
     \centering
     \includegraphics[width=\textwidth]{figures/pdf/figure-12} 
-    \caption{Pending.}% Seismic hazard curve of northern cities in Iran.}
+    \caption{Hazard curves representing the annual probability of exceedance as function of peak ground acceleration for six cities in northern Iran based on the four basic models considered in this study, namely R5.5, R6.5, U5.5 and U6.5.}
     \label{fig:hazardcurve}
 \end{figure*}
 
 \begin{figure}[t]
     \centering
     \includegraphics[width=\columnwidth]{figures/pdf/figure-13} 
-    \caption{Pending.}% Seismic hazard curve of northern cities in Iran.}
-    \label{fig:hazardcurve}
+    \caption{Hazard curve comparison between the models considered in this study and the results of two previous studies by \citet{Ghodrati2003} and \citet{Boostan2015} for the city of Tehran. Here, the two previous studies just mentioned are identified with the codes Gh03 and Bo15, respectively.}
+    \label{fig:tehran}
 \end{figure}
+
+Table \ref{tab:pga} shows a condensed version of these comparisons between our results and those of other previous studies for selected cities in northern Iran. In addition, we also looked into the more complete picture of the annual probabilities of exceedance as functions of PGA for six cities (all the same as in Table \ref{tab:pga} except Rasht). This is shown in Fig.~\ref{fig:hazardcurve} for the four basic models considered before, namely R5.5, R6.5, U5.5 and U6.5, each also including upper and lower ranges of one standard deviation. These hazard curves exemplify again the differences between the R and U models, which are more prominent in the northwest cities of Tabriz and Ardabil, where the U models yield higher expected values of PGA for any given annual probability of exceedance. Minor differences are also present in the central cities of Karaj and Tehran, whereas the cities of Urmia and Mashhad in the Zagros and Kopeh Dagh seismic zones present similar hazard levels between the two models (R and U). This is consistent with our previous observations regarding Figs.~\ref{fig:pga}, \ref{fig:pgadiff} and \ref{fig:pgaavgs}.
+
+Last, we pay additional attention to the capital city of Tehran and compare hazard...
 
 ~\\
 * * *
 \\
-
-Fig.~\ref{fig:hazardcurve} represents the hazard curve of different model for some of important northern cities in Iran. 
-
 
 % ==================
 % OLD STUFF NOT USED
