--- a/table-pga.tex
+++ b/table-pga.tex
@@ -1,26 +1,4 @@
-
-% \begin{table*}[t]
-% \centering
-% \caption{Comparison of expected PGA values for selected cities in northern Iran between results obtained in this study and those of others. For reference, the following codes are used. Va11: \citet{Vafaie2011}, Gh08: \citet{Ghodrati2008}, Bo15: \citet{Boostan2015}, Gh03: \citet{Ghodrati2003}, Ab14: \citet{Abdollahzadeh2014a}, Ra12: \citet{Rahgozar2012}, Ad13 \citet{Abdi2013}.}
-% \begin{tabular}{lcccccccccccccccccccccc}
-%     \hline
-%     Cities  & Lon. & Lat. & R55  &      & R65  &      & U55  &      & U65  &      & RU55 &      & RU65 &      & RU5565 &    & 2800 & Zare 2012  & Golara2014 & Other References &      &      \\    
-%             &      &      & 10\% &  2\% & 10\% &  2\% & 10\% &  2\% & 10\% &  2\% & 10\% &  2\% & 10\% &  2\% & 10\% &  2\% &      &            &            & 10\%       & 2\%        & Ref. \\
-%     \hline
-%     Urmia   & 45.1 & 37.6 & 0.28 & 0.45 & 0.19 & 0.34 & 0.28 & 0.47 & 0.21 & 0.37 & 0.28 & 0.46 & 0.20 & 0.36 & 0.26 & 0.40 & 0.30 & 0.35--0.50 & 0.3--0.5   &            &            &      \\
-%     Tabriz  & 46.3 & 38.1 & 0.20 & 0.34 & 0.12 & 0.23 & 0.39 & 0.59 & 0.29 & 0.51 & 0.34 & 0.53 & 0.24 & 0.41 & 0.30 & 0.49 & 0.35 & 0.35--0.50 & 0.9--1.2   & 0.20--0.65 & 0.30--0.90 & Va11 \\
-%     Ardabil & 48.3 & 38.3 & 0.23 & 0.38 & 0.14 & 0.27 & 0.47 & 0.70 & 0.37 & 0.57 & 0.39 & 0.58 & 0.28 & 0.50 & 0.36 & 0.55 & 0.30 & 0.35--0.50 & 0.5--0.7   &            &            &      \\
-%     Rasht   & 49.6 & 37.3 & 0.25 & 0.39 & 0.16 & 0.29 & 0.36 & 0.54 & 0.26 & 0.45 & 0.31 & 0.50 & 0.22 & 0.38 & 0.28 & 0.46 & 0.30 & 0.50--0.65 & 0.5--0.7   & 0.10       & 0.20       & Gh08 \\
-%             &      &      &      &      &      &             &      &      &      &      &      &      &      &      &      &      &            &            & 0.25--0.30 & 0.55--0.60 & Az14 \\
-%     Karaj   & 51.0 & 35.8 & 0.18 & 0.29 & 0.13 & 0.21 & 0.26 & 0.39 & 0.18 & 0.31 & 0.22 & 0.37 & 0.16 & 0.27 & 0.20 & 0.33 & 0.35 & 0.35--0.50 & 0.7--0.9   & 0.31       & 0.42       & Ab13 \\
-%     Tehran  & 51.4 & 35.7 & 0.23 & 0.38 & 0.15 & 0.27 & 0.33 & 0.51 & 0.24 & 0.39 & 0.28 & 0.46 & 0.20 & 0.36 & 0.26 & 0.40 & 0.35 & 0.35--0.50 & 0.7--0.9   & 0.37--0.42 &            & Gh03 \\
-%             &      &      &      &      &      &             &      &      &      &      &      &      &      &      &      &      &            &            & 0.27--0.30 &            & Ab13 \\
-%             &      &      &      &      &      &             &      &      &      &      &      &      &      &      &      &      &            &            & 0.42--0.48 &            & Bo15 \\
-%     Mashhad & 59.6 & 36.3 & 0.27 & 0.42 & 0.19 & 0.34 & 0.23 & 0.38 & 0.16 & 0.28 & 0.25 & 0.39 & 0.18 & 0.31 & 0.22 & 0.37 & 0.30 & 0.35--0.50 & 0.7-0.9    &            &            &      \\
-%     \hline
-% \end{tabular}
-% \label{tab:pga} 
-% \end{table*}
+\setlength{\tabcolsep}{1ex}
 
 \begin{table*}[t]
 \centering
@@ -38,7 +16,7 @@
 \begin{tabular}{lcccccccccc}
     \hline                                                                                                                      \\[-1.6ex]
     \multicolumn{2}{l}{This study}  
-                    &        && \multicolumn{7}{c}{City (lat., long)}                                                           \\[0.6ex]
+                    &        && \multicolumn{7}{c}{City (lat., lon.)}                                                           \\[0.6ex]
     \cline{5-11}                                                                                                                \\[-1.6ex]
             &       &        &&   Urmia     &   Tabriz    &   Ardabil   &   Rasht     &   Karaj     &   Tehran    &   Mashhad   \\
     Model   & $M_w$ & Prob.  && (45.1,37.6) & (46.3,38.1) & (48.3,38.3) & (49.6,37.3) & (51.0,35.8) & (51.4,35.7) & (59.6,36.3) \\[0.6ex]
@@ -58,29 +36,24 @@
     \hline                                                                                                                      \\[-1.6ex]
     \multicolumn{3}{l}{Other Studies}                                                                                           \\[0.6ex]
     \cline{1-3} \cline{5-11}                                                                                                    \\[-1.6ex]
-    \multicolumn{2}{l}{Bo15}
+    Bo15    &   4.0${}^{*}$ 
                     &  10\%  &&   --        &   --        &   --        &   --        &   --        & 0.42--0.48  &   --        \\
-    \multicolumn{2}{l}{Az14}
-                    &  10\%  &&   --        &   --        &   --        & 0.25--0.30  &   --        &             &   --        \\
+    Az14    &       &  10\%  &&   --        &   --        &   --        & 0.25--0.30  &   --        &             &   --        \\
             &       &   2\%  &&   --        &   --        &   --        & 0.55--0.60  &   --        &             &   --        \\
-    \multicolumn{2}{l}{BC14}
-                    &  --    &&   0.30      &   0.35      &   0.30      &   0.30      &   0.35      &   0.35      &   0.30      \\
-    \multicolumn{2}{l}{Go14}
-                    &  --    && 0.30--0.50  & 0.90--1.20  & 0.50--0.70  & 0.50--0.70  & 0.70--0.90  & 0.70--0.90  & 0.70--0.90  \\
-    \multicolumn{2}{l}{Ab13}
+    BC14    &       &  10\%  &&   0.30      &   0.35      &   0.30      &   0.30      &   0.35      &   0.35      &   0.30      \\
+    Go14    &       &   2\%  && 0.30--0.50  & 0.90--1.20  & 0.50--0.70  & 0.50--0.70  & 0.70--0.90  & 0.70--0.90  & 0.70--0.90  \\
+    Ab13    & 5.5, 6.0${}^{*,\dagger}$ 
                     &  10\%  &&   --        &   --        &   --        &   --        &   0.31      & 0.27--0.30  &   --        \\
             &       &   2\%  &&   --        &   --        &   --        &   --        &   0.42      &             &   --        \\
-    \multicolumn{2}{l}{Za12}
-                    &  --    && 0.35--0.50  & 0.35--0.50  & 0.35--0.50  & 0.50--0.65  & 0.35--0.50  & 0.35--0.50  & 0.35--0.50  \\
-    \multicolumn{2}{l}{Va11}                
-                    &  10\%  &&   --        & 0.20--0.65  &   --        &   --        &   --        &             &   --        \\
+    Za12    &       &  10\%  && 0.35--0.50  & 0.35--0.50  & 0.35--0.50  & 0.50--0.65  & 0.35--0.50  & 0.35--0.50  & 0.35--0.50  \\
+    Va11    &       &  10\%  &&   --        & 0.20--0.65  &   --        &   --        &   --        &             &   --        \\
             &       &   2\%  &&   --        & 0.30--0.90  &   --        &   --        &   --        &             &   --        \\
-    \multicolumn{2}{l}{Gh08}        
-                    &  10\%  &&   --        &   --        &   --        &   0.10      &   --        &             &   --        \\
+    Gh08    &       &  10\%  &&   --        &   --        &   --        &   0.10      &   --        &             &   --        \\
             &       &   2\%  &&   --        &   --        &   --        &   0.20      &   --        &             &   --        \\
-    \multicolumn{2}{l}{Gh03}
-                    &  10\%  &&   --        &   --        &   --        &   --        &   --        & 0.37--0.42  &   --        \\[0.6ex]
-    \hline
+    Gh03    &       &  10\%  &&   --        &   --        &   --        &   --        &   --        & 0.37--0.42  &   --        \\[0.6ex]
+    \hline                                                                                                                      \\[-1.6ex]
+    \multicolumn{11}{l}{\small{${}^{*}$ Magnitude threshold defined in terms of surface-wave magnitude ($M_s$) instead of moment magnitude ($M_w$).}}\\
+    \multicolumn{11}{l}{\small{${}^{\dagger}$ Used $M_s$ 5.5 and 6.0 for the Central-East and Alborz-Azerbaijan seismic zones, respectively.}}    
 \end{tabular}
 \label{tab:pga} 
 \end{table*}
