--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,3 +1,10 @@
-\section{Conclusions}
 
-The result of a new probabilistic seismic hazard assessment for northern Iran using updated seismic catalogs is provided. Seismic hazard is evaluated over entire three regions (Azerbaijan, Alboz, Kopeh-Dagh) as well as part of Central and Zagros tectonic seismic regions using the smoothed background seismicity. In order to determine the seismic hazard in North Iran, different studies have been done. These studies are based on defining faults as a seismic source model. Using faults as a seismic source model could result in accurate values in case the faults are precisely determined. There are considerable uncertainties on fault characteristic, specially on fault length. Instead of using faults as a seismic source, we consider each earthquake event as a point source in the model. We reduce the uncertainty in earthquake location by smoothing the number of earthquake in adjacent cells. We defined models based on considering the whole North Iran as a uniform seismic tectonic regions and 5 different seismic tectonic regions. The differences in catalog completeness, b value, and maximum magnitude of earthquake in these two models resulted in different results. This indicate the idea that dividing regions into subregions is necessary in order to be able to get accurate results. The result are also sensitive to the minimum magnitude. The structures built according to engineering code are supposed to withstand the earthquake with magnitude 5 at the reasonable distance. However, closer $M_w > 4.5$ for those structures and also older masonry structures could cause structural damage. A combination of two models $(M_w > 4.5, M_w>5)$ in each city based on number of engineering and old masonry structures will provide more accurate results. The results are provided for mean peak horizontal acceleration in bedrock. The ground acceleration in soil deposits and inside basin will be bigger than the provided values. This model reduce the epistemic uncertainty regarding the recognizing faults and earthquake location. Combination of this model with a study based on using faults will increase the values for existing non-active seismic fault regions.  
+\section{Concluding Remarks}
+
+We present results from a comprehensive seismic hazard analysis for the region of northern Iran based on a smoothed seismicity approach, including regional maps of expected peak ground accelerations for different seismic-zonation models and magnitude thresholds. In particular, we calculated the hazard for the region of interest using two basic models, a five-seismic zone regions model and a uniform seismic zone model. Our calculations yield results similar to those of other studies but offer a more complete picture than previous hazard analysis due to the usage of a more complete catalog and inclusion of low-magnitude events. In our analysis we found it convenient to combine both the regional and uniform models as a mean to consider the epistemic uncertainty intrinsic to the subjective choice of models and seismic zones. Such a combination yielded hazard maps that adjusted better to the visual interpretation of the historical and instrumental seismicity observed in the region of interest, and the to the location of known seismically active faults. While no one model can be deemed more appropriate than others, we believe our results constitute a positive contribution to the understanding of seismic hazard in the region, especially for rural ares which are not the subject of specialized hazard studies such as those conducted for major urban areas. Future work to improve the results presented here should consider alternative attenuation relationships, especially for estimating other ground motion parameters such as response spectral accelerations for different periods and site effects.
+
+% ---------
+% OLD STUFF
+% ---------
+
+% The result of a new probabilistic seismic hazard assessment for northern Iran using updated seismic catalogs is provided. Seismic hazard is evaluated over entire three regions (Azerbaijan, Alboz, Kopeh-Dagh) as well as part of Central and Zagros tectonic seismic regions using the smoothed background seismicity. In order to determine the seismic hazard in North Iran, different studies have been done. These studies are based on defining faults as a seismic source model. Using faults as a seismic source model could result in accurate values in case the faults are precisely determined. There are considerable uncertainties on fault characteristic, specially on fault length. Instead of using faults as a seismic source, we consider each earthquake event as a point source in the model. We reduce the uncertainty in earthquake location by smoothing the number of earthquake in adjacent cells. We defined models based on considering the whole North Iran as a uniform seismic tectonic regions and 5 different seismic tectonic regions. The differences in catalog completeness, b value, and maximum magnitude of earthquake in these two models resulted in different results. This indicate the idea that dividing regions into subregions is necessary in order to be able to get accurate results. The result are also sensitive to the minimum magnitude. The structures built according to engineering code are supposed to withstand the earthquake with magnitude 5 at the reasonable distance. However, closer $M_w > 4.5$ for those structures and also older masonry structures could cause structural damage. A combination of two models $(M_w > 4.5, M_w>5)$ in each city based on number of engineering and old masonry structures will provide more accurate results. The results are provided for mean peak horizontal acceleration in bedrock. The ground acceleration in soil deposits and inside basin will be bigger than the provided values. This model reduce the epistemic uncertainty regarding the recognizing faults and earthquake location. Combination of this model with a study based on using faults will increase the values for existing non-active seismic fault regions.  
