--- a/content.tex
+++ b/content.tex
@@ -13,12 +13,9 @@
 
 \input{results}
 
-% Temporary stuff
-% ---------------
-
 \input{conclusions}    
 
-% \input{Acknowledgements}
+\input{Acknowledgements}
 
 
 
