--- a/results.tex
+++ b/results.tex
@@ -66,13 +66,11 @@ We also note that the overall distribution of PGA values shown in Fig.~\ref{fig:
     \label{fig:tehran}
 \end{figure}
 
-Table \ref{tab:pga} shows a condensed version of these comparisons between our results and those of other previous studies for selected cities in northern Iran. In addition, we also looked into the more complete picture of the annual probabilities of exceedance as functions of PGA for six cities (all the same as in Table \ref{tab:pga} except Rasht). This is shown in Fig.~\ref{fig:hazardcurve} for the four basic models considered before, namely R5.5, R6.5, U5.5 and U6.5, each also including upper and lower ranges of one standard deviation. These hazard curves exemplify again the differences between the R and U models, which are more prominent in the northwest cities of Tabriz and Ardabil, where the U models yield higher expected values of PGA for any given annual probability of exceedance. Minor differences are also present in the central cities of Karaj and Tehran, whereas the cities of Urmia and Mashhad in the Zagros and Kopeh Dagh seismic zones present similar hazard levels between the two models (R and U). This is consistent with our previous observations regarding Figs.~\ref{fig:pga}, \ref{fig:pgadiff} and \ref{fig:pgaavgs}.
+Table \ref{tab:pga} shows a condensed version of these comparisons between our results and those of other previous studies for selected cities in northern Iran. As mentioned before, overall, our results are close or within the ranges from most studies. The only noticeable exceptions are the results of \citet{Golara2014}, whose expected PGA values are significantly higher the rest, especially in the cities of Tabriz, Karaj, Tehran and Mashhad. This is likely due to the authors working with mower magnitude thresholds (not clearly reported) than other studies where hazard is usually estimated based on earthquake magnitudes exceeding $M_w > 5$. Although not included here for brevity we also computed expected PGA values for a magnitude threshold of $M_w$ 4.5 and 5.0. We found the former case to yield results closer to those of \citet{Golara2014}, but not to the other studies. Using lower magnitude thresholds may be of relevance if evaluating poorly constructed and unreinforced buildings vulnerable to low-to-moderate magnitude earthquakes.
 
-Last, we pay additional attention to the capital city of Tehran and compare hazard...
+Following the comparisons shown in Table \ref{tab:pga}, we looked into the more complete picture of the annual probabilities of exceedance as functions of PGA. The results are shown in Fig.~\ref{fig:hazardcurve} for six of the main cities in northern Iran considering the four basic models R5.5, R6.5, U5.5 and U6.5. In each case we also show $\pm 1$ standard deviation (shaded ranges). These hazard curves exemplify again the differences between the R and U models, which are more prominent in the northwest cities of Tabriz and Ardabil, where the U models yield higher expected values of PGA for any given annual probability of exceedance. Minor differences are also present in the results of the central cities of Karaj and Tehran, whereas for the cities of Urmia and Mashhad in the Zagros and Kopeh Dagh seismic zones, the R and U models yield similar hazard levels. This is consistent with our previous observations regarding Figs.~\ref{fig:pga}, \ref{fig:pgadiff} and \ref{fig:pgaavgs}.
 
-~\\
-* * *
-\\
+Last, we put additional attention on the results for the capital city of Tehran. We compare hazard curves obtained in this study against those computed by \citet{Ghodrati2003} and \citet{Boostan2015}. Our results are similar to those obtained by \citet{Ghodrati2003} between 0.4 and 0.8 g (corresponding to annual probabilities of exceedance between $10^{-5}$ and $10^{-3}$), but we obtain lower probabilities for the ground motion amplitudes between 0.1 and 0.4 g, and higher probabilities for very low ($<0.1$ g) and much higher PGA ($>0.8$ g) values. These differences with \citet{Ghodrati2003}, nonetheless, are still within our levels of uncertainty. A similar interpretation can be made for the comparison with \citet{Boostan2015} for low PGA values ($<0.4$ g), but the trajectory of their hazard curve suggests much higher probabilities of exceeding PGA values above 0.6 g, which is contrary to our findings.
 
 % ==================
 % OLD STUFF NOT USED
