looks like done

--- a/main.tex
+++ b/main.tex
@@ -37,8 +37,8 @@
 % Authors
 \author{%
 	N.~Khoshnevis \and
-	S.~Azizzadeh-Roodpish \and
 	R.~Taborda \and
+	S.~Azizzadeh-Roodpish \and
 	C.~H.~Cramer
 }
 
@@ -49,7 +49,7 @@
 	Center for Earthquake Research and Information,
 	University of Memphis, 3890 Central Ave., Memphis TN 38152, USA\\
 	\and
-	S.~Azizzadeh-Roodpish \and R.~Taborda (\Letter)\at
+	R.~Taborda (\Letter) \and S.~Azizzadeh-Roodpish \at
 	Department of Civil Engineering, and
 	Center for Earthquake Research and Information,
 	University of Memphis, 3890 Central Ave., Memphis TN 38152, USA\\
