implemented final comments from Naeem

--- a/completeness.tex
+++ b/completeness.tex
@@ -10,7 +10,7 @@
 
 An important aspect of seismic catalogs is their completeness. This characteristic is measured in terms of the start-year of completeness and the completeness magnitude, which are both parameters that are later used in the seismic analysis process. The start-year of completeness is the point in time at which catalog data exhibit a steady rate of event occurrence or record accumulation for a certain magnitude range, and the completeness magnitude ($M_c$) is the magnitude above which the seismic catalog of a region can be considered complete within a certain time period.
 
-The start-year of completeness is usually identified by inspection. A simple approach used by \citet{Frankel1995} and others is to select the year at which a plot of the cumulative number of events with respect to time becomes (or starts to resemble) a straight line. This is done for different magnitude ranges. Following this approach, we determined the year of completeness for magnitude ranges 3--4, 4--5, 5--6 and 6--7. Our choices are illustrated in Fig.~\ref{fig:completeness}, where we show the normalized cumulative number of events with time for each of the seismic zones and magnitude ranges, and indicate our selection of the year of completeness in each case. The values shown in this figure and those corresponding to the uniform model of the entire region of interest are summarized in Table \ref{tab:completeness}. For events $M_w>7$, in which case there are no sufficient data to determine a proper threshold, we assumed the catalog to be complete from the earliest time at which there is record of large magnitude earthquakes. 
+The start-year of completeness is commonly identified by inspection. A simple approach used by \citet{Frankel1995} and others is to select the year at which a plot of the cumulative number of events with respect to time becomes (or starts to resemble) a straight line. This is done for different magnitude ranges. Following this approach, we determined the year of completeness for magnitude ranges 3--4, 4--5, 5--6 and 6--7. Our choices are illustrated in Fig.~\ref{fig:completeness}, where we show the normalized cumulative number of events with time for each of the seismic zones and magnitude ranges, and indicate our selection of the year of completeness in each case. The values shown in this figure and those corresponding to the uniform model of the entire region of interest are summarized in Table \ref{tab:completeness}. For events $M_w>7$, in which case there are no sufficient data to determine a proper threshold, we assumed the catalog to be complete from the earliest time at which there is record of large magnitude earthquakes. 
 
 Determining the completeness magnitude $M_c$, on the other hand, is often determined using simple numerical analysis in combination with data inspection. Two common approaches are maximum curvature and the goodness-of-fit test methods. The maximum curvature method, or MAXC for simplicity, is widely used because as it has been implemented in the ZMAP software package for seismic hazard analysis developed by \citet{Wiemer2001}. \citet{Zare2014}, for instance, used this software to identify $M_c$ values for the different regions of the Middle East. We use the goodness-of-fit test method introduced by \citet{Wiemer2000}, and compute $M_c$ for different catalog-time intervals, namely 1800--1899, 1900--1999, 2000--2015, and for the complete regional catalogs.
 
