--- a/references.bib
+++ b/references.bib
@@ -643,6 +643,14 @@
   Doi                      = {10.1785/0120150178}
 }
 
+@Manual{Kijko_2004_HA3,
+  Title                    = {Seismic Hazard Assessment for selected Area, {HA3}},
+
+  Address                  = {Unpublished manuscript},
+  Author                   = {Kijko, A},
+  Year                     = {2004}
+}
+
 @Article{Kijko_2004_PAG,
   Title                    = {Estimation of the Maximum Earthquake Magnitude, $m_{\max}$},
   Author                   = {Kijko, A.},
