--- a/results.tex
+++ b/results.tex
@@ -44,13 +44,13 @@ These, of course, are only mean expected levels of ground motion. A more complet
 
 The highest expected PGA values are observed in the 2R6.5+STD model with accelerations of higher than 1 g in the Kopeh Dagh region and west of Tehran, and 0.8 g south of the North Tabriz Fault system and in the Zagros region along. These maximum values should, nonetheless, be interpreted with caution given the fact that predictions are based on rock-site assumptions and do not include any kind of site effects, such as inelastic deformation of near-surface geotechnical layers which may often contribute to mitigate peak accelerations.
 
-An additional consideration to make here is the fact that any one model cannot be uniquely correct. They all carry a certain level of epistemic uncertainty which makes them equally accurate and inaccurate at the same time. A means to address the uncertainty intrinsic to each model is to use combinations of different models. We consider different types of combinations to aid our analysis. First, we combine results at in the R and U models independently by averaging the two magnitude results. These combinations follow the hypothesis that in areas where mixed reinforced and unreinforced buildings are present, the hazard and associated expected ground motions will be an average of both magnitude thresholds. Fig.~\ref{fig:pgaavgs}a shows the result of this combination for the R models and Fig.~\ref{fig:pgaavgs}b shows the result for the combined U models. Second, we consider the combination of the two underlying hazard models R and U for the separate magnitude levels. These results are shown in Fig.~\ref{fig:pgaavgs}c. Last, we consider an overall combination of both hazard models and magnitude thresholds, as shown in Fig.~\ref{fig:pgaavgs}d. At all times we keep separate the probabilities of exceedance.
+An additional consideration to make here is the fact that any one model cannot be uniquely correct. They all carry a certain level of epistemic uncertainty which makes them equally accurate and inaccurate at the same time. A means to address the uncertainty intrinsic to each model is to use combinations of different models. We consider different types of combinations to aid our analysis. First, we combine results at in the R and U models independently by averaging the two magnitude results. These combinations follow the hypothesis that in areas where mixed reinforced and unreinforced buildings are present, the hazard and associated expected ground motions will be an average of both magnitude thresholds. Fig.~\ref{fig:pgaavgs}a shows the result of this combination for the R models and Fig.~\ref{fig:pgaavgs}b shows the result for the combined U models. Second, we consider the combination of the two underlying hazard models R and U for the separate magnitude levels. These results are shown in Fig.~\ref{fig:pgaavgs}c. Last, we consider an overall combination of both hazard models and magnitude thresholds, as shown in Fig.~\ref{fig:pgaavgs}d.
 
 These figures show interest results. Combining the two magnitude levels in either the R or U models (Figs.~\ref{fig:pgaavgs}a and \ref{fig:pgaavgs}b) does not have a significant impact other than finding a middle point in between the two ``slices'' taken at the corresponding hazard curves of all the individual grid points. For that matter, defining a threshold at $M_w$ 6.0 is almost equivalent and becomes only a matter of choice. Combining both R and U models, and the two magnitude results (Fig.~\ref{fig:pgaavgs}d), on the other hand, oversmooths the results and eliminates some of the detail desirable in this kind of analysis. It is therefore the combination of the R and U models, but at the separate magnitude thresholds (Fig.~\ref{fig:pgaavgs}c) the one that offers the most plausible scenario. These combinations are the ones that best match the visual inspection of the seismicity of the region (shown in Fig.~\ref{fig:catalog}) and follow the major faults (shown in Fig.~\ref{fig:selected}a), while also bringing into the picture the regional background seismicity of moderate magnitude earthquakes. That is, in the combinations shown in Fig.~\ref{fig:pgaavgs}c one can clearly observe the contribution of the North Tabriz Fault system in the Azerbaijan region, the contribution of the Piranshahr and Morvarid faults in the Zagros region, and that of the different faults in the Alborz and Kopeh Dagh regions. 
 
 \input{table-pga}
 
-We also note that the overall distribution of PGA values shown in Fig.~\ref{fig:pgaavgs}c are the ones that best agree with the recent study by \citet{Khodaverdian_2016_BSSA}. These estimates also agree, on average, with other previous studies. For the north-west seismic regions of Azerbaijan and Zagros, for instance, \citet{Tavakoli1999} predicts maximum mean PGA values of 0.45 g near the North Tabriz Fault and the North Tehran Fault zones, and 0.4 g around the city of Urmia, where we find equivalent values to be between 0.4 and 0.6 g, and about 0.35 g, respectively. The results from \citet{Vafaie2011} for the city of Tabriz, on the other hand, are slightly higher than the averages shown in Fig.~\ref{fig:pgaavgs}c and are closer to those we present in Fig.~\ref{fig:pga}b, which are in the order of 0.8 g and 0.6 for the models 2U5.5 and 10U5.5. In the north-central region of Alborz, \citet{Ghodrati2003} and \citet{Boostan2015} predict PGA values of the order 0.27--0.46 g and 0.42--0.48 for Tehran, where we found equivalent results to be between 0.3 and 0.45 g. Similarly, \citet{Abdi2013} reports expected PGA values in the vicinity of Karaj and Tehran to be on the order of 0.3 g. Results from \citet{Ghodrati2008} for the Gilan province around the city of Rasht are also of the same order of those we show in Figs.~\ref{fig:pga} and \ref{fig:pgaavgs}c. Finally, for the Kopeh Dagh region, and in particular, for the city of Bojnurd in the northeast province of Khorasan, \citet{Rahgozar2012} reports expected PGA values for return periods of 475 and 2475 years in range of 0.15--0.22 g and 0.28--0.49 g, respectively, where for magnitudes exceeding $M_w$ 6.5 we found equivalent values to be in the order of 0.2--0.4 and 0.4--0.6 g. 
+We also note that the overall distribution of PGA values shown in Fig.~\ref{fig:pgaavgs}c are the ones that best agree with the recent study by \citet{Khodaverdian_2016_BSSA}. These estimates also agree, on average, with other previous studies. For the north-west seismic regions of Azerbaijan and Zagros, for instance, \citet{Tavakoli1999} predicts maximum mean PGA (10\% in 50 years) values of 0.45 g near the North Tabriz Fault and the North Tehran Fault zones, where we find equivalent values to be between 0.2 and 0.4 g. The results from \citet{Vafaie2011} for the city of Tabriz, on the other hand, are slightly higher than the averages shown in Fig.~\ref{fig:pgaavgs}c and are closer to those we present in Fig.~\ref{fig:pga}b, which are in the order of 0.8 and 0.6 g for the models 2U5.5 and 10U5.5. In the north-central region of Alborz, \citet{Ghodrati2003} and \citet{Boostan2015} predict PGA values of the order 0.27--0.46 g and 0.42--0.48 for Tehran, where we found equivalent results to be between 0.2 and 0.35 g, which are closer to the values reported by \citet{Abdi2013}, who predicts PGA values in the vicinity of Karaj and Tehran to be on the order of 0.3 g. Results from \citet{Ghodrati2008} for the Gilan province around the city of Rasht are also of the same order of those we show in Figs.~\ref{fig:pga} and \ref{fig:pgaavgs}c. Finally, for the Kopeh Dagh region, and in particular, for the city of Bojnurd in the northeast province of Khorasan, \citet{Rahgozar2012} reports expected PGA values for return periods of 475 and 2475 years in range of 0.15--0.22 g and 0.28--0.49 g, respectively, where for magnitudes exceeding $M_w$ 6.5 we found equivalent values to be in the order of 0.2--0.4 and 0.4--0.6 g. 
 
 \begin{figure*}[th!]
     \centering
@@ -66,7 +66,7 @@ We also note that the overall distribution of PGA values shown in Fig.~\ref{fig:
     \label{fig:tehran}
 \end{figure}
 
-Table \ref{tab:pga} shows a condensed version of these comparisons between our results and those of other previous studies for selected cities in northern Iran. As mentioned before, overall, our results are close or within the ranges from most studies. The only noticeable exceptions are the results of \citet{Golara2014}, whose expected PGA values are significantly higher the rest, especially in the cities of Tabriz, Karaj, Tehran and Mashhad. This is likely due to the authors working with mower magnitude thresholds (not clearly reported) than other studies where hazard is usually estimated based on earthquake magnitudes exceeding $M_w > 5$. Although not included here for brevity we also computed expected PGA values for a magnitude threshold of $M_w$ 4.5 and 5.0. We found the former case to yield results closer to those of \citet{Golara2014}, but not to the other studies. Using lower magnitude thresholds may be of relevance if evaluating poorly constructed and unreinforced buildings vulnerable to low-to-moderate magnitude earthquakes.
+Table \ref{tab:pga} shows a condensed version of these comparisons between our results and those of other previous studies for selected cities in northern Iran. As mentioned before, overall, our results are close or within the ranges from most studies. The only noticeable exceptions are the results of \citet{Golara2014}, whose expected PGA values are significantly higher the rest, especially in the cities of Tabriz, Karaj, Tehran and Mashhad. This is likely due to the authors working with lower magnitude thresholds (not clearly reported) than other studies where hazard is usually estimated based on earthquake magnitudes exceeding $M_w > 5$. Although not included here for brevity, we also computed expected PGA values for magnitude thresholds $M_w$ 4.5 and 5.0. We found the former case to yield results closer to those of \citet{Golara2014}, but not to the other studies. Using lower magnitude thresholds may be of relevance if evaluating poorly constructed and unreinforced buildings vulnerable to low-to-moderate magnitude earthquakes. We should also note that, in general, the smoothed seismicity method used here tends to lead to lower hazard estimations than those obtained using specific fault definitions (as opposed to point sour\-ces).
 
 Following the comparisons shown in Table \ref{tab:pga}, we looked into the more complete picture of the annual probabilities of exceedance as functions of PGA. The results are shown in Fig.~\ref{fig:hazardcurve} for six of the main cities in northern Iran considering the four basic models R5.5, R6.5, U5.5 and U6.5. In each case we also show $\pm 1$ standard deviation (shaded ranges). These hazard curves exemplify again the differences between the R and U models, which are more prominent in the northwest cities of Tabriz and Ardabil, where the U models yield higher expected values of PGA for any given annual probability of exceedance. Minor differences are also present in the results of the central cities of Karaj and Tehran, whereas for the cities of Urmia and Mashhad in the Zagros and Kopeh Dagh seismic zones, the R and U models yield similar hazard levels. This is consistent with our previous observations regarding Figs.~\ref{fig:pga}, \ref{fig:pgadiff} and \ref{fig:pgaavgs}.
 
