--- a/composition.tex
+++ b/composition.tex
@@ -16,11 +16,11 @@ Recent catalogs such as that by \citet{Karimiparidari2013}, \citet{Shahvar2013},
 
 In this study we adopt the catalog compiled for the Middle East by \citet{Zare2014} and complement it for our particular region of interest. This catalog is particularly relevant because it is published as part of the current effort by the Global Earthquake Model (GEM) partnership and the Earthquake Model of the Middle East (EMME) project. It combines over 28 thousand records from 26 datasets with both historical and instrumental seismicity. Instrumental datasets included information from international, regional, and local agencies and networks, such as the U.S.~Geological Survey's National Earthquake Information Center (NEIC), the International Seismological Center (ISC) bulletins, the International Institute of Earthquake Engineering and Seismology (IIEES), the Iranian Seismological Center (IRSC) at the University of Tehran, and the Iranian Strong Motion Network operated by the Building and Housing Research Center (BHRC), among others. Historical data included the datasets prepared over the years by \citet{Ambraseys_1982_Book}, \citet{Ambraseys_2005_Book}, and \citet{Ambraseys_2009_Book}.
 
-For the particular case of our region of interest, the catalog prepared by \citet{Zare2014} included events $M_w \geq 4$ between 550 B.C.~and 2006. We took information from the catalog up to December 1999, and complemented it by adding newer and more complete data from IIEES for events $M \geq 3$ between January 2000 and December 2015. While we recognize that earthquakes in the range $3 \leq M_w \leq 4$ are unlikely to cause structural damage, we include them as a means to feed the model with information about epicentral locations with potential for future larger magnitude earthquakes. By contrast, a recent seismic hazard analysis done for Iran by \citet{Khodaverdian_2016_BSSA} used a similar for events $M_w \geq 4$ catalog but only included data up until 2011, which excluded the 2012 $M_w$ 6.4 Tabriz earthquake that severely damaged the northeast part of the country.
+For the particular case of our region of interest, the catalog prepared by \citet{Zare2014} included events $M_w \geq 4$ between 550 B.C.~and 2006. We took information from the catalog up to December 1999, and complemented it by adding newer and more complete data from IIEES for events $M \geq 3$ between January 2000 and December 2015. While we recognize that earthquakes in the range $3 \leq M_w \leq 4$ are unlikely to cause structural damage, we include them as a means to feed the model with information about epicentral locations with potential for future larger magnitude earthquakes. By contrast, a recent seismic hazard analysis done for Iran by \citet{Khodaverdian_2016_BSSA} used a similar catalog for events $M_w \geq 4$ but only included data through 2011, excluding the 2012 $M_w$ 6.4 Tabriz earthquake that severely damaged the northeast part of the country.
 
-In terms of magnitude scale, the events in \citet{Zare2014} were converted from $M_L$, $M_s$ and $m_b$ scales to $M_w$ using relationships derived by the authors and by \citet{Escordilis_2006_JS}. For consistency, we used the same conversion relationships for the portion of the catalog obtained from IIEES for $M \geq 3$ earthquakes between 2000 and 2015. The dataset from IIEES also contained events reported by ISC on a duration magnitude ($M_D$) scale. In these cases we used the empirical relationship introduced by \citet{Deniz2010} to convert $M_D$ to $M_w$. Although this relationship was derived based on a dataset for $M_w \geq 4.5$ events, we extrapolated the equation for lower magnitudes and found the results to adjust well with the general trend. 
+In terms of magnitude scale, the events in \citet{Zare2014} were converted from $M_L$, $M_s$ and $m_b$ scales to $M_w$ using relationships derived by the authors and by \citet{Escordilis_2006_JS}. For consistency, we used the same conversion relationships for the portion of the catalog obtained from IIEES for $M \geq 3$ earthquakes between 2000 and 2015. The dataset from IIEES also contained events reported by ISC on a duration magnitude ($M_D$) scale. In these cases we used the empirical relationship introduced by \citet{Deniz2010} to convert $M_D$ to $M_w$. Although this relationship was derived based on a dataset for $M_w \geq 4.5$ events, we extrapolated the equation for lower magnitudes and found that results agree well with the general trend. 
 
-Selection and declustering was also done in consistence with the original catalog, using the method of \citet{Gardner1974}. In summary, we obtained the whole catalog version of \citet{Zare2014}, removed the events from 2000 and forward, complemented the catalog with $M>3$ events up to 2015 from IIEES, and finally declustered the new complemented catalog removing foreshocks and aftershocks. The resulting set of events compiled for this study is shown in Fig.~\ref{fig:catalog}, which includes the spatial distribution within the region of interest for both historical and instrumental events; and in Fig.~\ref{fig:scatter}, which presents the distribution of events in time and magnitude for each of the seismic zones, as well as for the complete region of interest (hereafter referred as the uniform model).
+Selection and declustering was also done in a manner consistent with the original catalog, using the method of \citet{Gardner1974}. In summary, we obtained the whole catalog version of \citet{Zare2014}, removed the events from 2000 and forward, complemented the catalog with $M>3$ events up to 2015 from IIEES, and finally declustered the new complemented catalog removing foreshocks and aftershocks. The resulting set of events compiled for this study is shown in Fig.~\ref{fig:catalog}, which includes the spatial distribution within the region of interest for both historical and instrumental events; and in Fig.~\ref{fig:scatter}, which presents the distribution of events in time and magnitude for each of the seismic zones, as well as for the complete region of interest (hereafter referred as the uniform model).
 
 \begin{figure*} [t]
 	\centering
