fixed table 3 to new values for M5

--- a/results.tex
+++ b/results.tex
@@ -15,16 +15,17 @@
 \begin{figure*}[t]
     \centering
     \includegraphics[width=\textwidth]{figures/pdf/figure-10.pdf} 
-    \caption{Expected PGA values throughout the region of interest for 2 and 10 percent probability of exceeding an earthquake magnitude $M_w$ 6.5 using the hazard calculations from the five-region R model and the attenuation relationship plus and minus one standard deviation.}
+    \caption{Pending.}
+    % \caption{Expected PGA values throughout the region of interest for 2 and 10 percent probability of exceeding an earthquake magnitude $M_w$ 6.5 using the hazard calculations from the five-region R model and the attenuation relationship plus and minus one standard deviation.}
     \label{fig:pgastd}
 \end{figure*}
 
-\begin{figure*}[th!]
-    \centering
-    \includegraphics[width=\textwidth]{figures/pdf/figure-11.pdf} 
-    \caption{Expected PGA values for different combination models. (a) Combination of R models for magnitudes $M_w$ 5.5 and 6.5. (b) Combination of U models for magnitudes $M_w$ 5.5 and 6.5. (c) Combination of R and U models for separate magnitudes $M_w$ 5.5 and 6.5. (d) Combination of R and U models, and magnitudes $M_w$ 5.5 and 6.5.}
-    \label{fig:pgaavgs}
-\end{figure*}
+% \begin{figure*}[th!]
+%     \centering
+%     \includegraphics[width=\textwidth]{figures/pdf/figure-11.pdf} 
+%     \caption{Expected PGA values for different combination models. (a) Combination of R models for magnitudes $M_w$ 5.5 and 6.5. (b) Combination of U models for magnitudes $M_w$ 5.5 and 6.5. (c) Combination of R and U models for separate magnitudes $M_w$ 5.5 and 6.5. (d) Combination of R and U models, and magnitudes $M_w$ 5.5 and 6.5.}
+%     \label{fig:pgaavgs}
+% \end{figure*}
 
 \section{Results and Analysis}
 
@@ -54,14 +55,14 @@ We also note that the overall distribution of PGA values shown in Fig.~\ref{fig:
 
 \begin{figure*}[th!]
     \centering
-    \includegraphics[width=\textwidth]{figures/pdf/figure-12} 
+    \includegraphics[width=\textwidth]{figures/pdf/figure-11} 
     \caption{Hazard curves representing the annual probability of exceedance as function of peak ground acceleration for six cities in northern Iran based on the four basic models considered in this study, namely R5.5, R6.5, U5.5 and U6.5.}
     \label{fig:hazardcurve}
 \end{figure*}
 
 \begin{figure}[t]
     \centering
-    \includegraphics[width=\columnwidth]{figures/pdf/figure-13} 
+    \includegraphics[width=\columnwidth]{figures/pdf/figure-12} 
     \caption{Hazard curve comparison between the models considered in this study and the results of two previous studies by \citet{Ghodrati2003} and \citet{Boostan2015} for the city of Tehran. Here, the two previous studies just mentioned are identified with the codes Gh03 and Bo15, respectively.}
     \label{fig:tehran}
 \end{figure}
