--- a/table-pga.tex
+++ b/table-pga.tex
@@ -13,48 +13,41 @@
     Az14: \citet{Abdollahzadeh2014a},
     Bo15: \citet{Boostan2015}.
     }
-\begin{tabular}{lcccccccccc}
-    \hline                                                                                                                      \\[-1.6ex]
+\begin{tabular}{lccccccccc}
+    \hline                                                                                                              \\[-1.6ex]
     \multicolumn{2}{l}{This study}  
-                    &        && \multicolumn{7}{c}{City (lat., lon.)}                                                           \\[0.6ex]
-    \cline{5-11}                                                                                                                \\[-1.6ex]
-            &       &        &&   Urmia     &   Tabriz    &   Ardabil   &   Rasht     &   Karaj     &   Tehran    &   Mashhad   \\
-    Model   & $M_w$ & Prob.  && (45.1,37.6) & (46.3,38.1) & (48.3,38.3) & (49.6,37.3) & (51.0,35.8) & (51.4,35.7) & (59.6,36.3) \\[0.6ex]
-    \cline{1-3} \cline{5-11}                                                                                                    \\[-1.6ex]
-    R       &   5.5 &  10\%  &&   0.28      &   0.20      &   0.23      &   0.25      &   0.18      &   0.23      &   0.27      \\
-            &       &   2\%  &&   0.45      &   0.34      &   0.38      &   0.39      &   0.29      &   0.38      &   0.42      \\
-            &   6.5 &  10\%  &&   0.19      &   0.12      &   0.14      &   0.16      &   0.13      &   0.15      &   0.19      \\
-            &       &   2\%  &&   0.34      &   0.23      &   0.27      &   0.29      &   0.21      &   0.27      &   0.34      \\
-    U       &   5.5 &  10\%  &&   0.28      &   0.39      &   0.47      &   0.36      &   0.26      &   0.33      &   0.23      \\
-            &       &   2\%  &&   0.47      &   0.59      &   0.70      &   0.54      &   0.39      &   0.51      &   0.38      \\
-            &   6.5 &  10\%  &&   0.21      &   0.29      &   0.37      &   0.26      &   0.18      &   0.24      &   0.16      \\
-            &       &   2\%  &&   0.37      &   0.51      &   0.57      &   0.45      &   0.31      &   0.39      &   0.28      \\
-    (R,U)   &   5.5 &  10\%  &&   0.28      &   0.34      &   0.39      &   0.31      &   0.22      &   0.28      &   0.25      \\
-            &       &   2\%  &&   0.46      &   0.53      &   0.58      &   0.50      &   0.37      &   0.46      &   0.39      \\
-            &   6.5 &  10\%  &&   0.20      &   0.24      &   0.28      &   0.22      &   0.16      &   0.20      &   0.18      \\
-            &       &   2\%  &&   0.36      &   0.41      &   0.50      &   0.38      &   0.27      &   0.36      &   0.31      \\[0.6ex]
-    \hline                                                                                                                      \\[-1.6ex]
-    \multicolumn{3}{l}{Other Studies}                                                                                           \\[0.6ex]
-    \cline{1-3} \cline{5-11}                                                                                                    \\[-1.6ex]
-    Bo15    &   4.0${}^{*}$ 
-                    &  10\%  &&   --        &   --        &   --        &   --        &   --        & 0.42--0.48  &   --        \\
-    Az14    &       &  10\%  &&   --        &   --        &   --        & 0.25--0.30  &   --        &             &   --        \\
-            &       &   2\%  &&   --        &   --        &   --        & 0.55--0.60  &   --        &             &   --        \\
-    BC14    &       &  10\%  &&   0.30      &   0.35      &   0.30      &   0.30      &   0.35      &   0.35      &   0.30      \\
-    Go14    &       &   2\%  && 0.30--0.50  & 0.90--1.20  & 0.50--0.70  & 0.50--0.70  & 0.70--0.90  & 0.70--0.90  & 0.70--0.90  \\
-    Ab13    & 5.5, 6.0${}^{*,\dagger}$ 
-                    &  10\%  &&   --        &   --        &   --        &   --        &   0.31      & 0.27--0.30  &   --        \\
-            &       &   2\%  &&   --        &   --        &   --        &   --        &   0.42      &             &   --        \\
-    Za12    &       &  10\%  && 0.35--0.50  & 0.35--0.50  & 0.35--0.50  & 0.50--0.65  & 0.35--0.50  & 0.35--0.50  & 0.35--0.50  \\
-    Va11    &       &  10\%  &&   --        & 0.20--0.65  &   --        &   --        &   --        &             &   --        \\
-            &       &   2\%  &&   --        & 0.30--0.90  &   --        &   --        &   --        &             &   --        \\
-    Gh08    &       &  10\%  &&   --        &   --        &   --        &   0.10      &   --        &             &   --        \\
-            &       &   2\%  &&   --        &   --        &   --        &   0.20      &   --        &             &   --        \\
-    Gh03    &       &  10\%  &&   --        &   --        &   --        &   --        &   --        & 0.37--0.42  &   --        \\[0.6ex]
-    \hline                                                                                                                      \\[-1.6ex]
-    \multicolumn{11}{l}{\small{${}^{*}$ Magnitude threshold defined in terms of surface-wave magnitude ($M_s$) instead of moment magnitude ($M_w$).}}\\
-    \multicolumn{11}{l}{\small{${}^{\dagger}$ Used $M_s$ 5.5 and 6.0 for the Central-East and Alborz-Azerbaijan seismic zones, respectively.}}    
+                     && \multicolumn{7}{c}{City (lat., lon.)}                                                           \\[0.6ex]
+    \cline{4-10}                                                                                                        \\[-1.6ex]
+            &        &&   Urmia     &   Tabriz    &   Ardabil   &   Rasht     &   Karaj     &   Tehran    &   Mashhad   \\
+    Model   & Prob.  && (45.1,37.6) & (46.3,38.1) & (48.3,38.3) & (49.6,37.3) & (51.0,35.8) & (51.4,35.7) & (59.6,36.3) \\[0.6ex]
+    \cline{1-2} \cline{4-10}                                                                                            \\[-1.6ex]
+    R       &  10\%  &&   0.29      &   0.23      &   0.26      &   0.27      &   0.20      &   0.25      &   0.28      \\
+            &   2\%  &&   0.47      &   0.36      &   0.39      &   0.40      &   0.32      &   0.39      &   0.44      \\
+    U       &  10\%  &&   0.31      &   0.40      &   0.49      &   0.37      &   0.27      &   0.35      &   0.25      \\
+            &   2\%  &&   0.49      &   0.61      &   0.70      &   0.54      &   0.40      &   0.52      &   0.38      \\
+    (R,U)   &  10\%  &&   0.30      &   0.36      &   0.40      &   0.34      &   0.25      &   0.30      &   0.27      \\
+            &   2\%  &&   0.48      &   0.53      &   0.60      &   0.51      &   0.38      &   0.48      &   0.40      \\
+    \hline                                                                                                              \\[-1.6ex]
+    \multicolumn{2}{l}{Other Studies}                                                                                   \\[0.6ex]
+    \cline{1-2} \cline{4-10}                                                                                            \\[-1.6ex]
+    Bo15${}^{*}$ 
+            &  10\%  &&   --        &   --        &   --        &   --        &   --        & 0.42--0.48  &   --        \\
+    Az14    &  10\%  &&   --        &   --        &   --        & 0.25--0.30  &   --        &             &   --        \\
+            &   2\%  &&   --        &   --        &   --        & 0.55--0.60  &   --        &             &   --        \\
+    BC14    &  10\%  &&   0.30      &   0.35      &   0.30      &   0.30      &   0.35      &   0.35      &   0.30      \\
+    Go14    &   2\%  && 0.30--0.50  & 0.90--1.20  & 0.50--0.70  & 0.50--0.70  & 0.70--0.90  & 0.70--0.90  & 0.70--0.90  \\
+    Ab13${}^{*,\dagger}$ 
+            &  10\%  &&   --        &   --        &   --        &   --        &   0.31      & 0.27--0.30  &   --        \\
+            &   2\%  &&   --        &   --        &   --        &   --        &   0.42      &             &   --        \\
+    Za12    &  10\%  && 0.35--0.50  & 0.35--0.50  & 0.35--0.50  & 0.50--0.65  & 0.35--0.50  & 0.35--0.50  & 0.35--0.50  \\
+    Va11    &  10\%  &&   --        & 0.20--0.65  &   --        &   --        &   --        &             &   --        \\
+            &   2\%  &&   --        & 0.30--0.90  &   --        &   --        &   --        &             &   --        \\
+    Gh08    &  10\%  &&   --        &   --        &   --        &   0.10      &   --        &             &   --        \\
+            &   2\%  &&   --        &   --        &   --        &   0.20      &   --        &             &   --        \\
+    Gh03    &  10\%  &&   --        &   --        &   --        &   --        &   --        & 0.37--0.42  &   --        \\[0.6ex]
+    \hline                                                                                                              \\[-1.6ex]
+    \multicolumn{10}{l}{\small{${}^{*}$ Used surface-wave magnitude $M_s$ 4.0 as magnitude threshold}}                  \\
+    \multicolumn{10}{l}{\small{${}^{\dagger}$ Used $M_s$ 5.5 and 6.0 for Central-East and Alborz-Azerbaijan as magnitude threshold}}    
 \end{tabular}
 \label{tab:pga} 
 \end{table*}
-
